--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ĐBDK2T - Cửa hàng điện tử & công nghệ</title>
+    <title>KDB - Cửa hàng điện tử & công nghệ</title>
     <meta name="description" content="ĐBDK2T - Nơi cung cấp các sản phẩm điện tử chính hãng với giá cả cạnh tranh và dịch vụ hậu mãi tốt nhất.">
     
     <!-- Preload critical resources -->
